RH-2007-08-14-0: Bugfix:    o hedeby_build uses build_testsuite.properties
                              for hedeby build configuration
                 Issue:     80 (hedeby issuzilla)
                 Review:    CR

CR-2007-08-13-0: Bugfix:    o html directory creation for additional clusters
                              no working
                 Enhancem.: o Enhanced html report with possiblity to specify
                              links for tasks
                 Issue:     78
                 Review:    RH

CR-2007-08-10-2: Bugfix:    Hedeby checktree:
                            Add switch or configuration parameter to disable
                            security
                 Issue:     77
                 Review:    TBD

CR-2007-08-10-1: Cleanup:   o Fixed some adoc headers

CR-2007-08-10-0: Enhancem.: o added boolean type for generic_config()
                            o added new hedeby configuration parameter:
                              security_disable
                 Review:    AA

JG-2007-08-10-0: Enhancem.: Removed unset -complain - it caused problems with 
                            older TCL versions.
                            Use start_sge_bin where possible, cleanup.
                            Fixed qdel check (qdel_force).
                 Review:    MD, RD

JG-2007-08-09-0: Bugfix:    Fixed consumable_resources test.
                 Review:    MD

CR-2007-08-09-1: Cleanup:   o Added ADOC headers for checktree_hedeby/util.tcl
                            o renamed remove_hedeby() to
                              remove_hedeby_preferences()

CR-2007-08-09-0: Enhancem.: o The current default value for send_speed in the
                              host configuration is to slow. Changed default value
                              to "0.0" which means that the send speed is not
                              limited.
                            o added new command line parameter "send_speed" to